// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Given there are no surveys available in blaise > should render the page correctly when no surveys are returned > EditPageNoSurveysReturned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="Surveys"
      >
        <div
          class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
          id="panel-_r_d_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Important information:
             
          </span>
          <div
            class="ons-panel__body "
          >
            There are no surveys available
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="Surveys"
    >
      <div
        class="ons-panel ons-panel--info ons-panel--no-title ons-panel--spacious ons-u-mt-m"
        id="panel-_r_d_"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Important information:
           
        </span>
        <div
          class="ons-panel__body "
        >
          There are no surveys available
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there are surveys available in blaise > should render the editor page correctly when surveys are returned > EditPageSurveysReturned 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="Surveys"
      >
        <br />
        <div
          data-testid="survey-accordion"
          id="survey"
        >
          <div
            class="ons-details ons-details--initialised ons-u-mt-l "
            data-save-state="true"
            id="survey-0"
            role="group"
          >
            <div
              aria-controls="survey-0-content"
              aria-expanded="false"
              class="ons-details__heading"
              data-ga-action="Open panel"
              data-testid="survey-0-heading"
              role="button"
              tabindex="0"
            >
              <h2
                class="ons-details__title ons-u-fs-r--b"
              >
                FRS
              </h2>
              <span
                class="ons-details__icon"
              >
                <svg
                  aria-hidden="true"
                  class="ons-icon"
                  fill="currentColor"
                  focusable="false"
                  role="img"
                  viewBox="0 0 8 13"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                    transform="translate(-5.02 -1.59)"
                  />
                </svg>
              </span>
            </div>
            <div
              aria-hidden="true"
              class="ons-details__content"
              data-testid="survey-0-content"
              id="survey-0-content"
            >
              <div
                class="ons-field"
              >
                <label
                  class="ons-label"
                  for="select-questionnaire"
                >
                  Select questionnaire
                </label>
                <select
                  class="ons-input ons-input--select"
                  data-testid="select-questionnaire-input"
                  id="select-questionnaire"
                  name="select"
                >
                  <option
                    disabled=""
                    value=""
                  >
                    Select an option
                  </option>
                  <option
                    data-testid="select-questionnaire-option-FRS2504A_EDIT"
                    value="FRS2504A_EDIT"
                  >
                    FRS2504A (April 2025)
                  </option>
                  <option
                    data-testid="select-questionnaire-option-FRS2505A_EDIT"
                    value="FRS2505A_EDIT"
                  >
                    FRS2505A (May 2025)
                  </option>
                </select>
              </div>
              <div
                class="questionnaire"
                data-testid="questionnaire"
              >
                <div
                  class="editorContent ons-u-mb-l"
                  data-testid="FRS2504A_EDIT-editorContent"
                >
                  <br />
                  <div
                    class="ons-field"
                  >
                    <label
                      class="ons-label"
                      for="filter-cases"
                    >
                      Filter cases
                    </label>
                    <select
                      class="ons-input ons-input--select"
                      data-testid="filter-cases-input"
                      id="filter-cases"
                      name="select"
                    >
                      <option
                        disabled=""
                        value=""
                      >
                        Select an option
                      </option>
                      <option
                        data-testid="filter-cases-option-"
                        value=""
                      >
                        All
                      </option>
                      <option
                        data-testid="filter-cases-option-In progress"
                        value="In progress"
                      >
                        In progress
                      </option>
                      <option
                        data-testid="filter-cases-option-Queried"
                        value="Queried"
                      >
                        Queried
                      </option>
                      <option
                        data-testid="filter-cases-option-Completed"
                        value="Completed"
                      >
                        Completed
                      </option>
                      <option
                        data-testid="filter-cases-option-Not started"
                        value="Not started"
                      >
                        Not started
                      </option>
                    </select>
                  </div>
                  <br />
                  <div
                    class="ons-table-scrollable ons-table-scrollable--on"
                  >
                    <div
                      aria-label="Table"
                      class="ons-table-scrollable__content"
                      role="region"
                      tabindex="0"
                    >
                      <table
                        class="ons-table"
                        data-testid="FRS2504A_EDIT-Case-table-table"
                        id="FRS2504A_EDIT-Case-table"
                      >
                        <thead
                          class="ons-table__head"
                        >
                          <tr
                            class="ons-table__row"
                          >
                            <th
                              class="ons-table__header ons-table__header--top"
                              scope="col"
                            >
                              <span
                                class="ons-table__header-text"
                              >
                                Case ID
                              </span>
                            </th>
                            <th
                              class="ons-table__header ons-table__header--top"
                              scope="col"
                            >
                              <span
                                class="ons-table__header-text"
                              >
                                Status
                              </span>
                            </th>
                            <th
                              class="ons-table__header ons-table__header--top"
                              scope="col"
                            >
                              <span
                                class="ons-table__header-text"
                              />
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="ons-table__body"
                        >
                          <tr
                            class="ons-table__row"
                          >
                            <td
                              aria-label="FRS2504A_EDIT-CaseID"
                              class="ons-col-2@m ons-table__cell"
                            >
                              10001011
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-EditStatus"
                              class="ons-col-2@m ons-table__cell status"
                            >
                              Completed
                            </td>
                            <td
                              class="ons-col-8@m ons-table__cell ons-u-ta-right"
                            >
                              <a
                                aria-disabled="false"
                                aria-label="Download case summary"
                                href="/questionnaires/FRS2504A_EDIT/cases/10001011/summary"
                                id="download-10001011-summary"
                              >
                                Download case summary
                              </a>
                               | 
                              <a
                                data-discover="true"
                                href="/questionnaires/FRS2504A_EDIT/cases/10001011/summary"
                              >
                                View case summary
                              </a>
                               | 
                              <a
                                href="https://cati.blaise.com/FRS2504A?KeyValue=10001011"
                                rel="noopener noreferrer"
                                target="_blank"
                              >
                                Edit case
                              </a>
                            </td>
                          </tr>
                          <tr
                            class="ons-table__row"
                          >
                            <td
                              aria-label="FRS2504A_EDIT-CaseID"
                              class="ons-col-2@m ons-table__cell"
                            >
                              10001012
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-EditStatus"
                              class="ons-col-2@m ons-table__cell status"
                            >
                              In progress
                            </td>
                            <td
                              class="ons-col-8@m ons-table__cell ons-u-ta-right"
                            >
                              <a
                                aria-disabled="false"
                                aria-label="Download case summary"
                                href="/questionnaires/FRS2504A_EDIT/cases/10001012/summary"
                                id="download-10001012-summary"
                              >
                                Download case summary
                              </a>
                               | 
                              <a
                                data-discover="true"
                                href="/questionnaires/FRS2504A_EDIT/cases/10001012/summary"
                              >
                                View case summary
                              </a>
                               | 
                              <a
                                href="https://cati.blaise.com/FRS2504A?KeyValue=10001012"
                                rel="noopener noreferrer"
                                target="_blank"
                              >
                                Edit case
                              </a>
                            </td>
                          </tr>
                          <tr
                            class="ons-table__row"
                          >
                            <td
                              aria-label="FRS2504A_EDIT-CaseID"
                              class="ons-col-2@m ons-table__cell"
                            >
                              10001013
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-EditStatus"
                              class="ons-col-2@m ons-table__cell status"
                            >
                              Not started
                            </td>
                            <td
                              class="ons-col-8@m ons-table__cell ons-u-ta-right"
                            >
                              <a
                                aria-disabled="false"
                                aria-label="Download case summary"
                                href="/questionnaires/FRS2504A_EDIT/cases/10001013/summary"
                                id="download-10001013-summary"
                              >
                                Download case summary
                              </a>
                               | 
                              <a
                                data-discover="true"
                                href="/questionnaires/FRS2504A_EDIT/cases/10001013/summary"
                              >
                                View case summary
                              </a>
                               | 
                              <a
                                href="https://cati.blaise.com/FRS2504A?KeyValue=10001013"
                                rel="noopener noreferrer"
                                target="_blank"
                              >
                                Edit case
                              </a>
                            </td>
                          </tr>
                          <tr
                            class="ons-table__row"
                          >
                            <td
                              aria-label="FRS2504A_EDIT-CaseID"
                              class="ons-col-2@m ons-table__cell"
                            >
                              10001014
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-EditStatus"
                              class="ons-col-2@m ons-table__cell status"
                            >
                              Completed
                            </td>
                            <td
                              class="ons-col-8@m ons-table__cell ons-u-ta-right"
                            >
                              <a
                                aria-disabled="false"
                                aria-label="Download case summary"
                                href="/questionnaires/FRS2504A_EDIT/cases/10001014/summary"
                                id="download-10001014-summary"
                              >
                                Download case summary
                              </a>
                               | 
                              <a
                                data-discover="true"
                                href="/questionnaires/FRS2504A_EDIT/cases/10001014/summary"
                              >
                                View case summary
                              </a>
                               | 
                              <a
                                href="https://cati.blaise.com/FRS2504A?KeyValue=10001014"
                                rel="noopener noreferrer"
                                target="_blank"
                              >
                                Edit case
                              </a>
                            </td>
                          </tr>
                          <tr
                            class="ons-table__row"
                          >
                            <td
                              aria-label="FRS2504A_EDIT-CaseID"
                              class="ons-col-2@m ons-table__cell"
                            >
                              10001015
                            </td>
                            <td
                              aria-label="FRS2504A_EDIT-EditStatus"
                              class="ons-col-2@m ons-table__cell status"
                            >
                              Completed
                            </td>
                            <td
                              class="ons-col-8@m ons-table__cell ons-u-ta-right"
                            >
                              <a
                                aria-disabled="false"
                                aria-label="Download case summary"
                                href="/questionnaires/FRS2504A_EDIT/cases/10001015/summary"
                                id="download-10001015-summary"
                              >
                                Download case summary
                              </a>
                               | 
                              <a
                                data-discover="true"
                                href="/questionnaires/FRS2504A_EDIT/cases/10001015/summary"
                              >
                                View case summary
                              </a>
                               | 
                              <a
                                href="https://cati.blaise.com/FRS2504A?KeyValue=10001015"
                                rel="noopener noreferrer"
                                target="_blank"
                              >
                                Edit case
                              </a>
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="Surveys"
    >
      <br />
      <div
        data-testid="survey-accordion"
        id="survey"
      >
        <div
          class="ons-details ons-details--initialised ons-u-mt-l "
          data-save-state="true"
          id="survey-0"
          role="group"
        >
          <div
            aria-controls="survey-0-content"
            aria-expanded="false"
            class="ons-details__heading"
            data-ga-action="Open panel"
            data-testid="survey-0-heading"
            role="button"
            tabindex="0"
          >
            <h2
              class="ons-details__title ons-u-fs-r--b"
            >
              FRS
            </h2>
            <span
              class="ons-details__icon"
            >
              <svg
                aria-hidden="true"
                class="ons-icon"
                fill="currentColor"
                focusable="false"
                role="img"
                viewBox="0 0 8 13"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M5.74,14.28l-.57-.56a.5.5,0,0,1,0-.71h0l5-5-5-5a.5.5,0,0,1,0-.71h0l.57-.56a.5.5,0,0,1,.71,0h0l5.93,5.93a.5.5,0,0,1,0,.7L6.45,14.28a.5.5,0,0,1-.71,0Z"
                  transform="translate(-5.02 -1.59)"
                />
              </svg>
            </span>
          </div>
          <div
            aria-hidden="true"
            class="ons-details__content"
            data-testid="survey-0-content"
            id="survey-0-content"
          >
            <div
              class="ons-field"
            >
              <label
                class="ons-label"
                for="select-questionnaire"
              >
                Select questionnaire
              </label>
              <select
                class="ons-input ons-input--select"
                data-testid="select-questionnaire-input"
                id="select-questionnaire"
                name="select"
              >
                <option
                  disabled=""
                  value=""
                >
                  Select an option
                </option>
                <option
                  data-testid="select-questionnaire-option-FRS2504A_EDIT"
                  value="FRS2504A_EDIT"
                >
                  FRS2504A (April 2025)
                </option>
                <option
                  data-testid="select-questionnaire-option-FRS2505A_EDIT"
                  value="FRS2505A_EDIT"
                >
                  FRS2505A (May 2025)
                </option>
              </select>
            </div>
            <div
              class="questionnaire"
              data-testid="questionnaire"
            >
              <div
                class="editorContent ons-u-mb-l"
                data-testid="FRS2504A_EDIT-editorContent"
              >
                <br />
                <div
                  class="ons-field"
                >
                  <label
                    class="ons-label"
                    for="filter-cases"
                  >
                    Filter cases
                  </label>
                  <select
                    class="ons-input ons-input--select"
                    data-testid="filter-cases-input"
                    id="filter-cases"
                    name="select"
                  >
                    <option
                      disabled=""
                      value=""
                    >
                      Select an option
                    </option>
                    <option
                      data-testid="filter-cases-option-"
                      value=""
                    >
                      All
                    </option>
                    <option
                      data-testid="filter-cases-option-In progress"
                      value="In progress"
                    >
                      In progress
                    </option>
                    <option
                      data-testid="filter-cases-option-Queried"
                      value="Queried"
                    >
                      Queried
                    </option>
                    <option
                      data-testid="filter-cases-option-Completed"
                      value="Completed"
                    >
                      Completed
                    </option>
                    <option
                      data-testid="filter-cases-option-Not started"
                      value="Not started"
                    >
                      Not started
                    </option>
                  </select>
                </div>
                <br />
                <div
                  class="ons-table-scrollable ons-table-scrollable--on"
                >
                  <div
                    aria-label="Table"
                    class="ons-table-scrollable__content"
                    role="region"
                    tabindex="0"
                  >
                    <table
                      class="ons-table"
                      data-testid="FRS2504A_EDIT-Case-table-table"
                      id="FRS2504A_EDIT-Case-table"
                    >
                      <thead
                        class="ons-table__head"
                      >
                        <tr
                          class="ons-table__row"
                        >
                          <th
                            class="ons-table__header ons-table__header--top"
                            scope="col"
                          >
                            <span
                              class="ons-table__header-text"
                            >
                              Case ID
                            </span>
                          </th>
                          <th
                            class="ons-table__header ons-table__header--top"
                            scope="col"
                          >
                            <span
                              class="ons-table__header-text"
                            >
                              Status
                            </span>
                          </th>
                          <th
                            class="ons-table__header ons-table__header--top"
                            scope="col"
                          >
                            <span
                              class="ons-table__header-text"
                            />
                          </th>
                        </tr>
                      </thead>
                      <tbody
                        class="ons-table__body"
                      >
                        <tr
                          class="ons-table__row"
                        >
                          <td
                            aria-label="FRS2504A_EDIT-CaseID"
                            class="ons-col-2@m ons-table__cell"
                          >
                            10001011
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-EditStatus"
                            class="ons-col-2@m ons-table__cell status"
                          >
                            Completed
                          </td>
                          <td
                            class="ons-col-8@m ons-table__cell ons-u-ta-right"
                          >
                            <a
                              aria-disabled="false"
                              aria-label="Download case summary"
                              href="/questionnaires/FRS2504A_EDIT/cases/10001011/summary"
                              id="download-10001011-summary"
                            >
                              Download case summary
                            </a>
                             | 
                            <a
                              data-discover="true"
                              href="/questionnaires/FRS2504A_EDIT/cases/10001011/summary"
                            >
                              View case summary
                            </a>
                             | 
                            <a
                              href="https://cati.blaise.com/FRS2504A?KeyValue=10001011"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              Edit case
                            </a>
                          </td>
                        </tr>
                        <tr
                          class="ons-table__row"
                        >
                          <td
                            aria-label="FRS2504A_EDIT-CaseID"
                            class="ons-col-2@m ons-table__cell"
                          >
                            10001012
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-EditStatus"
                            class="ons-col-2@m ons-table__cell status"
                          >
                            In progress
                          </td>
                          <td
                            class="ons-col-8@m ons-table__cell ons-u-ta-right"
                          >
                            <a
                              aria-disabled="false"
                              aria-label="Download case summary"
                              href="/questionnaires/FRS2504A_EDIT/cases/10001012/summary"
                              id="download-10001012-summary"
                            >
                              Download case summary
                            </a>
                             | 
                            <a
                              data-discover="true"
                              href="/questionnaires/FRS2504A_EDIT/cases/10001012/summary"
                            >
                              View case summary
                            </a>
                             | 
                            <a
                              href="https://cati.blaise.com/FRS2504A?KeyValue=10001012"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              Edit case
                            </a>
                          </td>
                        </tr>
                        <tr
                          class="ons-table__row"
                        >
                          <td
                            aria-label="FRS2504A_EDIT-CaseID"
                            class="ons-col-2@m ons-table__cell"
                          >
                            10001013
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-EditStatus"
                            class="ons-col-2@m ons-table__cell status"
                          >
                            Not started
                          </td>
                          <td
                            class="ons-col-8@m ons-table__cell ons-u-ta-right"
                          >
                            <a
                              aria-disabled="false"
                              aria-label="Download case summary"
                              href="/questionnaires/FRS2504A_EDIT/cases/10001013/summary"
                              id="download-10001013-summary"
                            >
                              Download case summary
                            </a>
                             | 
                            <a
                              data-discover="true"
                              href="/questionnaires/FRS2504A_EDIT/cases/10001013/summary"
                            >
                              View case summary
                            </a>
                             | 
                            <a
                              href="https://cati.blaise.com/FRS2504A?KeyValue=10001013"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              Edit case
                            </a>
                          </td>
                        </tr>
                        <tr
                          class="ons-table__row"
                        >
                          <td
                            aria-label="FRS2504A_EDIT-CaseID"
                            class="ons-col-2@m ons-table__cell"
                          >
                            10001014
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-EditStatus"
                            class="ons-col-2@m ons-table__cell status"
                          >
                            Completed
                          </td>
                          <td
                            class="ons-col-8@m ons-table__cell ons-u-ta-right"
                          >
                            <a
                              aria-disabled="false"
                              aria-label="Download case summary"
                              href="/questionnaires/FRS2504A_EDIT/cases/10001014/summary"
                              id="download-10001014-summary"
                            >
                              Download case summary
                            </a>
                             | 
                            <a
                              data-discover="true"
                              href="/questionnaires/FRS2504A_EDIT/cases/10001014/summary"
                            >
                              View case summary
                            </a>
                             | 
                            <a
                              href="https://cati.blaise.com/FRS2504A?KeyValue=10001014"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              Edit case
                            </a>
                          </td>
                        </tr>
                        <tr
                          class="ons-table__row"
                        >
                          <td
                            aria-label="FRS2504A_EDIT-CaseID"
                            class="ons-col-2@m ons-table__cell"
                          >
                            10001015
                          </td>
                          <td
                            aria-label="FRS2504A_EDIT-EditStatus"
                            class="ons-col-2@m ons-table__cell status"
                          >
                            Completed
                          </td>
                          <td
                            class="ons-col-8@m ons-table__cell ons-u-ta-right"
                          >
                            <a
                              aria-disabled="false"
                              aria-label="Download case summary"
                              href="/questionnaires/FRS2504A_EDIT/cases/10001015/summary"
                              id="download-10001015-summary"
                            >
                              Download case summary
                            </a>
                             | 
                            <a
                              data-discover="true"
                              href="/questionnaires/FRS2504A_EDIT/cases/10001015/summary"
                            >
                              View case summary
                            </a>
                             | 
                            <a
                              href="https://cati.blaise.com/FRS2504A?KeyValue=10001015"
                              rel="noopener noreferrer"
                              target="_blank"
                            >
                              Edit case
                            </a>
                          </td>
                        </tr>
                      </tbody>
                    </table>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given there the blaise rest api is not available > should render the page correctly for the user when an error occurs > EditorPageError 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        data-testid="Surveys"
      >
        <div
          class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
          id="panel-_r_j_"
        >
          <span
            class="ons-panel__assistive-text ons-u-vh"
          >
            Error:
             
          </span>
          <div
            class="ons-panel__body "
          >
            <h4>
              Something went wrong
            </h4>
            <p
              data-testid="ErrorMessage"
            >
              try again in a few minutes
            </p>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      data-testid="Surveys"
    >
      <div
        class="ons-panel ons-panel--error ons-panel--no-title ons-u-mt-m"
        id="panel-_r_j_"
      >
        <span
          class="ons-panel__assistive-text ons-u-vh"
        >
          Error:
           
        </span>
        <div
          class="ons-panel__body "
        >
          <h4>
            Something went wrong
          </h4>
          <p
            data-testid="ErrorMessage"
          >
            try again in a few minutes
          </p>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
